[project]
name = "security-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "azure-identity>=1.25.2",
    "dotenv>=0.9.9",
    "fastmcp>=3.0.1",
    "msgraph-sdk>=1.55.0",
]

[tool.uv.workspace]
members = [
    "modules",
]
